--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -185,22 +185,17 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>IdeaPad Slim 3i Gen 6</h1>
+          <h1>Lenovo IdeaPad Slim 3i</h1>
           <h3>Product Details</h3>
           <br />
           <p>
             <b>Processor :</b> 11th Generation Intel® Core™ i3-1115G4 Processor
-            (2 Cores / 4 Threads, 3.00 GHz, up to 4.10 GHz with Turbo Boost, 6
-            MB Cache)
           </p>
           <p><b>Operating System :</b> Windows 11 Home 64</p>
           <p><b>Graphics :</b> Integrated Intel® UHD Graphics</p>
           <p><b>RAM :</b> 8 GB SO-DIMM DDR4 3200MHz</p>
           <p><b>Storage :</b> 512 GB M.2 2280 SSD</p>
-          <p>
-            <b>Display :</b> 35.56cms (14) FHD (1920 x 1080), IPS,Anti-Glare,
-            Non-Touch, 300 Nits
-          </p>
+          <p><b>Display :</b> 35.56cms (14) FHD (1920 x 1080), IPS</p>
           <p><b>MRP :</b> 44,989</p>
           <a
             href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-3i-Gen-6-14%E2%80%B3-Intel/p/82H700V2IN"
@@ -254,23 +249,15 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>Inspiron 15 Laptop</h1>
+          <h1>Dell Inspiron 15</h1>
           <h3>Product Details</h3>
           <br />
-          <p>
-            <b>Processor :</b> 11th Gen Intel® Core™ i3-1125G4 (8 MB cache, 4
-            cores, 8 threads, up to 3.70 GHz Turbo)
-          </p>
-          <p>
-            <b>Operating System :</b> Windows 11 Home Single Language, English
-          </p>
+          <p><b>Processor :</b> 11th Gen Intel® Core™ i3-1125G4</p>
+          <p><b>Operating System :</b> Windows 11 Home Single Language</p>
           <p><b>Graphics</b>Intel® UHD Graphics</p>
           <p><b>RAM :</b> 8 GB, 1 x 8 GB, DDR4, 3200 MHz</p>
           <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
-          <p>
-            <b>Display :</b> 15.6", FHD 1920x1080, 60Hz, Non-Touch, AG,WVA,
-            LED-Backlit, Narrow Border
-          </p>
+          <p><b>Display :</b> 15.6", FHD 1920x1080</p>
           <p><b>MRP :</b> 49,989</p>
           <a
             href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-15-laptop/spd/inspiron-15-5510-laptop/bts-icc-c783501win8"
@@ -298,7 +285,7 @@
               </div>
             </div>------->
             <div class="footer-col-2">
-              <a href="/"><img src="./images/logo.png" alt="" /></a>
+              <a href="/"><h1>SUGGESTMEE</h1></a>
               <p>Make your buying decision with us</p>
             </div>
             <!----<div class="footer-col-4">
