--- a/gamming_laptops.html
+++ b/gamming_laptops.html
@@ -113,16 +113,16 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>IdeaPad Gaming 3</h1>
+          <h1>Lenovo IdeaPad Gaming 3</h1>
           <h3>Product Details</h3>
           <br />
           <p>
-            <p><b>Processor :</b> AMD Ryzen™ 7 5800H Processor (8 Cores / 16 Threads, 3.20 GHz, up to 4.40 GHz with Max Boost, 4 MB Cache L2 / 16 MB Cache L3) </p> 
+            <p><b>Processor :</b> AMD Ryzen™ 7 5800H Processor </p> 
             <p><b>Operating System :</b> Windows 11 Home 64</p> 
             <p><b>Graphics :</b> NVIDIA GeForce® RTX™ 3050 4GB GDDR6</p>
             <p><b>RAM :</b> 16 GB SO-DIMM DDR4 3200MHz</p>  
             <p><b>Storage :</b> 512 GB M.2 2280 SSD</p> 
-            <p><b>Display :</b> 39.62cms (15.6) FHD (1920 x 1080), IPS, Anti-Glare, Non-Touch, 45% NTSC, 250 Nits, 120Hz</p> 
+            <p><b>Display :</b> 39.62cms (15.6) FHD (1920 x 1080), IPS</p> 
             <p><b>MRP :</b> 80,040</p> 
           </p>
           <a
@@ -173,18 +173,18 @@
         </div>
         <div class="col-2">
           
-          <h1>OMEN by HP Laptop </h1>
+          <h1>msi GP66 LEOPARD </h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor :</b> 12th Generation Intel® Core™ i7 processor </p>
-          <p><b>Operating System :</b> Windows 11 Home 64</p> 
-          <p><b>Graphics :</b> NVIDIA® GeForce RTX™ 3060 Laptop GPU (6 GB GDDR6 dedicated)</p>
-          <p><b>RAM :</b> 16 GB DDR5-4800 MHz RAM (2 x 8 GB)</p>
-          <p><b>Storage :</b> 1 TB PCIe® NVMe™ TLC M.2 SSD</p>
-          <p><b>Display :</b> 40.9 cm (16.1") diagonal, FHD (1920 x 1080), 144 Hz, 7 ms response time, IPS, micro-edge, anti-glare, Low Blue Light, 300 nits, 100% sRGB</p>
-          <p><b>MRP :</b> 145,999</p>
+          <p><b>Processor :</b> Intel Core i7-11800H</p>
+          <p><b>Operating System :</b>Window 10 Home</p> 
+          <p><b>Graphics :</b> NVIDIA® GeForce RTX™ 3060 Laptop GPU</p>
+          <p><b>RAM :</b>16 GB of DDR4-3200 SDRAM Memory</p>
+          <p><b>Storage :</b> 1TB NVMe PCIe Gen4x4 SSD.</p>
+          <p><b>Display :</b> 15.6" FHD (1920x1080), IPS-Level 240Hz Thin Bezel</p>
+          <p><b>MRP :</b> 1,25,490</p>
           <a
-            href="https://www.hp.com/in-en/shop/omen-by-hp-laptop-16-b1361tx-68u27pa.html"
+            href="https://www.amazon.in/MSI-Leopard-i7-11800H-IPS-Level-11UE-604IN/dp/B09NNMYQ3F/ref=sr_1_9?crid=1DB4VIN3DZYN8&keywords=msi&qid=1650209179&sprefix=ms%2Caps%2C516&sr=8-9&th=1"
             class="btn" target="_blank"
             >BUY NOW</a
           >
@@ -233,19 +233,19 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>ALIENWARE M15 R6</h1>
+          <h1>Lenovo Legion Slim 7</h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor :</b> 11th Gen Intel® Core™ i7-11800H (24 MB cache, 8 cores, 16 threads, up to 4.60 GHz Turbo)</p>
-          <p><b>Operating System :</b> Windows 11 Home Single Language, English </p>
-          <p><b>Graphics :</b> NVIDIA® GeForce RTX™ 3080, 8 GB GDDR6</p>
+          <p><b>Processor :</b> AMD Ryzen™ 7 5800H Processor</p>
+          <p><b>Operating System :</b> Windows 11 Home 64</p>
+          <p><b>Graphics :</b> NVIDIA GeForce® RTX™ 3060 6GB GDDR6</p>
          
-          <p><b>RAM :</b> 32 GB, DDR4, 3200 MHz</p>
-          <p><b>Storage :</b> 1 TB, M.2, PCIe, SSD</p>
-          <p><b>Display :</b> 15.6", QHD 2560x1440, 240Hz, Non-Touch, 2ms, Advanced Optimus, CV+, NVIDIA G-SYNC </p>
-          <p><b>MRP :</b> 2,39,989</p>
+          <p><b>RAM :</b> 8 GB + 8GB Soldered DDR4 3200MHz</p>
+          <p><b>Storage :</b> 1 TB M.2 2280 SSD</p>
+          <p><b>Display :</b> 39.62cms (15.6) WQHD (2560 x 1440), IPS</p>
+          <p><b>MRP :</b> 144,990</p>
           <a
-            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/alienware-m15-r6-gaming-laptop/spd/alienware-m15-r6-laptop/icc-c780005win8"
+            href="https://www.lenovo.com/in/en/laptops/legion-laptops/legion-7-series/Legion-S7-15ACH6/p/88GMY701595"
             class="btn"
             target="_blank"
             >BUY NOW</a
@@ -269,7 +269,7 @@
               </div>
             </div>------->
             <div class="footer-col-2">
-              <a href="/"><img src="./images/logo.png" alt="" /></a>
+              <a href="/"><H1>SUGGESTMEE</H1></a>
               <p>Make your buying decision with us</p>
             </div>
             <!---<div class="footer-col-4">
