--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -123,23 +123,15 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>Inspiron 15 Laptop</h1>
+          <h1>Dell Inspiron 15</h1>
           <h3>Product Details</h3>
           <br />
-          <p>
-            <b>Processor :</b> 11th Gen Intel® Core™ i5-11320H (8 MB cache, 4
-            cores, 8 threads, up to 4.50 GHz Turbo)
-          </p>
-          <p>
-            <b>Operating System</b> Windows 11 Home Single Language, English
-          </p>
+          <p><b>Processor :</b> 11th Gen Intel® Core™ i5-11320H</p>
+          <p><b>Operating System</b> Windows 11 Home</p>
           <p><b>graphics :</b> Intel® Iris® Xe Graphics</p>
           <p><b>RAM :</b> 16 GB, 2 x 8 GB, DDR4, 3200 MHz</p>
           <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
-          <p>
-            <b>Display :</b> 15.6", FHD 1920x1080, 60Hz, Non-Touch, AG, WVA,
-            LED-Backlit, Narrow Border
-          </p>
+          <p><b>Display :</b> 15.6", FHD (1920x1080)</p>
           <p><b>MRP :</b> 68,989</p>
 
           <a
@@ -195,22 +187,15 @@
         </div>
         <div class="col-2">
           <p>Home /</p>
-          <h1>IdeaPad Slim 5i (15, Intel)</h1>
+          <h1>Lenovo IdeaPad Slim</h1>
           <h3>Product Details</h3>
           <br />
-          <p>
-            <b>Processor :</b> 11th Generation Intel® Core™ i5-1135G7 Processor
-            (4 Cores / 8 Threads, 2.40 GHz, up to 4.20 GHz with Turbo Boost, 8
-            MB Cache)
-          </p>
+          <p><b>Processor :</b> 11th Generation Intel® Core™ i5-1135G7</p>
           <p><b>Operating System :</b> Windows 11 Home 64</p>
           <p><b>Graphics :</b> Integrated Intel® Iris® Xe Graphics</p>
           <p><b>RAM :</b> 16 GB Soldered DDR4 3200MHz</p>
           <p><b>Storage :</b> 512 GB M.2 2280 SSD</p>
-          <p>
-            <b>Display :</b> 39.62cms (15.6) FHD (1920x1080) IPS 300nits
-            Anti-glare 45% NTSC
-          </p>
+          <p><b>Display :</b> 39.62cms (15.6),FHD (1920x1080),IPS</p>
           <p><b>MRP :</b> 63,990</p>
           <a
             href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-5i-15IIL05/p/88IPS501391"
@@ -265,7 +250,7 @@
           <h1>HP Pavilion Laptop 14-dv1002TU</h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor : </b> 11th Generation Intel® Core™ i5 processor</p>
+          <p><b>Processor : </b> 11th Generation Intel® Core™ i5</p>
           <p><b>Operating System :</b> Windows 11 Home</p>
           <p><b>Graphics : </b> Intel Iris Xe</p>
           <p><b>RAM :</b> 16 GB DDR4-3200 MHz RAM (2 x 8 GB)</p>
@@ -298,7 +283,7 @@
               </div>
             </div>------->
             <div class="footer-col-2">
-              <a href="/"><img src="./images/logo.png" alt="" /></a>
+              <a href="/"><h1>SUGGESTMEE</h1></a>
               <p>Make your buying decision with us</p>
             </div>
             <!---<div class="footer-col-4">
