--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               </div>
             </div>------>
             <div class="footer-col-2">
-              <a href="/"><img src="./images/logo.png" alt="" /></a>
+              <a href="/"><h1>SUGGESTMEE</h1></a>
               <p>Make your buying decision with us</p>
             </div>
             <!----<div class="footer-col-3">
