--- a/gamming_laptops.html
+++ b/gamming_laptops.html
@@ -126,7 +126,7 @@
             <p><b>MRP :</b> 80,040</p> 
           </p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/ideapad/ideapad-gaming-laptops/Gaming-3-Gen-6-15-AMD/p/82K200X3IN" class="btn" target="_blank">BUY NOW</a>
+            href="https://www.lenovo.com/in/en/laptops/ideapad/ideapad-gaming-laptops/Gaming-3-Gen-6-15-AMD/p/82K200X3IN" class="btn" target="_blank">Buy From Lenovo Store</a>
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@
           <a
             href="https://www.amazon.in/MSI-Leopard-i7-11800H-IPS-Level-11UE-604IN/dp/B09NNMYQ3F/ref=sr_1_9?crid=1DB4VIN3DZYN8&keywords=msi&qid=1650209179&sprefix=ms%2Caps%2C516&sr=8-9&th=1"
             class="btn" target="_blank"
-            >BUY NOW</a
+            >Buy From Amazon</a
           >
         </div>
       </div>
@@ -248,7 +248,7 @@
             href="https://www.lenovo.com/in/en/laptops/legion-laptops/legion-7-series/Legion-S7-15ACH6/p/88GMY701595"
             class="btn"
             target="_blank"
-            >BUY NOW</a
+            >Buy From Lenovo Store</a
           >
         </div>
       </div>
