--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
                 target="_blank"
-                >Follow Us</a
+                >Follow</a
               >
             </li>
             <li>
