--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -138,7 +138,7 @@
             href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-15-laptop/spd/inspiron-15-5510-laptop/bts-icc-c783511win8"
             class="btn"
             target="_blank"
-            >BUY NOW</a
+            >Buy From Dell Store</a
           >
         </div>
       </div>
@@ -201,7 +201,7 @@
             href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-5i-15IIL05/p/88IPS501391"
             class="btn"
             target="_blank"
-            >BUY NOW</a
+            >Buy From Lenovo Store</a
           >
         </div>
       </div>
@@ -247,22 +247,22 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>HP Pavilion Laptop 14-dv1002TU</h1>
+          <h1>HP Pavilion Aero</h1>
           <h3>Product Details</h3>
           <br />
-          <p><b>Processor : </b> 11th Generation Intel® Core™ i5</p>
+          <p><b>Processor : </b> AMD Ryzen™ 5 processor</p>
           <p><b>Operating System :</b> Windows 11 Home</p>
-          <p><b>Graphics : </b> Intel Iris Xe</p>
-          <p><b>RAM :</b> 16 GB DDR4-3200 MHz RAM (2 x 8 GB)</p>
+          <p><b>Graphics : </b> AMD Radeon™ Graphics</p>
+          <p><b>RAM :</b> 16 GB DDR4-3200 MHz RAM (onboard)</p>
           <p><b>Storage : </b> 512 GB PCIe® NVMe™ M.2 SSD</p>
-          <p><b>Display :</b> FHD IPS 35.56 cm (14)</p>
-          <p><b>MRP :</b>66,999</p>
+          <p><b>Display :</b> 13.3 , WUXGA (1920 x 1200), IPS</p>
+          <p><b>MRP :</b>69,999</p>
 
           <a
-            href="https://www.hp.com/in-en/shop/hp-pavilion-laptop-14-dv1002tu-50n48pa.html"
+            href="https://www.hp.com/in-en/shop/hp-pavilion-aero-laptop-13-be0206au-50n43pa.html"
             class="btn"
             target="_blank"
-            >BUY NOW</a
+            >Buy From HP Store</a
           >
         </div>
       </div>
