--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -123,22 +123,22 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>HP Laptop 15s-fq2626TU</h1>
+          <h1>HP Laptop 15s</h1>
           <h3>Product Details</h3>
           <br />
           <p><b>Processor :</b> 11th Generation Intel® Core™ i3 processor</p>
           <p><b>Operating System :</b> Windows 11 Home</p>
           <p><b>Graphics :</b> Intel UHD Graphics</p>
           <p><b>RAM : </b> 8 GB DDR4-2666 MHz RAM (1 x 8 GB)</p>
-          <p><b>Storage : </b> 256 GB PCIe® NVMe™ M.2 SSD</p>
+          <p><b>Storage : </b> 512 GB PCIe® NVMe™ M.2 SSD</p>
           <p><b>Display :</b> 39.62 cm (15.6) FHD</p>
-          <p><b>MRP : </b> 40,699</p>
+          <p><b>MRP : </b> 43,249</p>
 
           <a
-            href="https://www.hp.com/in-en/shop/laptops-tablets/hp-laptop-15s-fq2626tu-536c2pa.html"
+            href="https://www.hp.com/in-en/shop/hp-laptop-15s-fq2627tu-536c3pa.html"
             class="btn"
             target="_blank"
-            >BUY NOW</a
+            >Buy From HP Store</a
           >
         </div>
       </div>
@@ -193,15 +193,15 @@
           </p>
           <p><b>Operating System :</b> Windows 11 Home 64</p>
           <p><b>Graphics :</b> Integrated Intel® UHD Graphics</p>
-          <p><b>RAM :</b> 8 GB SO-DIMM DDR4 3200MHz</p>
-          <p><b>Storage :</b> 512 GB M.2 2280 SSD</p>
+          <p><b>RAM :</b>4 GB + 4 GB Soldered DDR4 2666MHz</p>
+          <p><b>Storage :</b> 256 GB M.2 2242 SSD</p>
           <p><b>Display :</b> 35.56cms (14) FHD (1920 x 1080), IPS</p>
-          <p><b>MRP :</b> 44,989</p>
+          <p><b>MRP :</b> 36,990</p>
           <a
-            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-3i-Gen-6-14%E2%80%B3-Intel/p/82H700V2IN"
+            href="https://www.lenovo.com/in/en/laptops/ideapad/s-series/IdeaPad-3i-14ITL5/p/81X700DNIN"
             class="btn"
             target="_blank"
-            >BUY NOW</a
+            >Buy From Lenovo store</a
           >
         </div>
       </div>
@@ -249,21 +249,21 @@
           </div>
         </div>
         <div class="col-2">
-          <h1>Dell Inspiron 15</h1>
+          <h1>Dell Vostro 3510</h1>
           <h3>Product Details</h3>
           <br />
           <p><b>Processor :</b> 11th Gen Intel® Core™ i3-1125G4</p>
           <p><b>Operating System :</b> Windows 11 Home Single Language</p>
           <p><b>Graphics</b>Intel® UHD Graphics</p>
-          <p><b>RAM :</b> 8 GB, 1 x 8 GB, DDR4, 3200 MHz</p>
-          <p><b>Storage :</b> 512 GB, M.2, PCIe NVMe, SSD</p>
+          <p><b>RAM :</b> 8 GB, 1 x 8 GB, DDR4, 2666 MHz</p>
+          <p><b>Storage :</b> 256 GB, M.2, PCIe NVMe, SSD</p>
           <p><b>Display :</b> 15.6", FHD 1920x1080</p>
-          <p><b>MRP :</b> 49,989</p>
+          <p><b>MRP :</b> 41,989</p>
           <a
-            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/inspiron-15-laptop/spd/inspiron-15-5510-laptop/bts-icc-c783501win8"
+            href="https://www.dell.com/en-in/shop/laptops-2-in-1-pcs/vostro-3510-laptop/spd/vostro-15-3510-laptop/bts-icc-d585047win8"
             class="btn"
             target="_blank"
-            >BUY NOW</a
+            >Buy From Dell Store</a
           >
         </div>
       </div>
