--- a/basic_use_laptops.html
+++ b/basic_use_laptops.html
@@ -49,12 +49,12 @@
   </head>
 
   <body>
-    <div class="container">
+    <header>
       <div class="navbar">
         <div class="logo">
-          <a href="/"><img src="./images/logo.png" alt="" width="125px" /></a>
+          <a href="/"><img src="./images/logo.png" alt="suggestmee logo" /></a>
         </div>
-        <nav>
+        <nav class="suggestme-nav">
           <ul id="menuItems">
             <li><a href="/">Home</a></li>
             <li>
@@ -66,20 +66,37 @@
             </li>
             <li>
               <a href="mailto:suggestme60@gmail.com?" target="_blank"
-                >Contact Us
-              </a>
+                >Contact Us</a
+              >
             </li>
+            <img
+              src="./images/close.svg"
+              class="menu-icon"
+              onclick="menutoggle()"
+              alt="menu logo"
+              style="top: 110px"
+            />
           </ul>
         </nav>
 
-        <img
-          src="./images/menu.png"
-          class="menu-icon"
-          onclick="menutoggle()"
-          alt=""
-        />
+        <div class="mobile-social-icons">
+          <img src="./images/fb.svg" alt="menu logo" class="social-icons" />
+          <img src="./images/insta.svg" alt="menu logo" class="social-icons" />
+          <img src="./images/mail.png" alt="menu logo" class="social-icons" />
+
+          <img
+            style="position: static"
+            src="./images/menu.png"
+            class="menu-icon"
+            id="menuIconClose"
+            onclick="menutoggle()"
+            alt="menu logo"
+          />
+        </div>
+
+        <hr style="margin: 30px 0" />
       </div>
-    </div>
+    </header>
 
     <!-- -----single products details 1 ----- -->
 
@@ -275,20 +292,12 @@
     <footer>
       <div class="footer">
         <div class="container">
-          <div class="row">
-            <!------<div class="footer-col-1">
-              <h3>Download our App</h3>
-              <p>Download our App for Android and ios mobile phone.</p>
-              <div class="app-logo">
-                <img src="./images/play-store.png" alt="" />
-                <img src="./images/app-store.png" alt="" />
-              </div>
-            </div>------->
+          <div class="">
             <div class="footer-col-2">
-              <a href="/"><h1>SUGGESTMEE</h1></a>
+              <a href="/" style="text-decoration: none"><h1>SUGGESTMEE</h1></a>
               <p>Make your buying decision with us</p>
             </div>
-            <!----<div class="footer-col-4">
+            <!---<div class="footer-col-4">
               <h3>Follow Us</h3>
               <ul>
                 <li><a href="#">Facebook</a></li>
@@ -305,14 +314,17 @@
 
     <script>
       var menuItems = document.getElementById("menuItems");
+      var menuIconClose = document.getElementById("menuIconClose");
 
       menuItems.style.maxHeight = "0px";
 
       function menutoggle() {
         if (menuItems.style.maxHeight == "0px") {
-          menuItems.style.maxHeight = "200px";
+          menuItems.style.maxHeight = "100vh";
+          menuIconClose.style.display = "none";
         } else {
-          menuItems.style.maxHeight = "0px";
+          menuItems.style.maxHeight = "0";
+          menuIconClose.style.display = "block";
         }
       }
     </script>
