--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
     <header>
       <div class="navbar">
         <div class="logo">
-          <a href="/"
-            ><img src="./images/logo.png" alt="suggestmee logo" width="125px"
-          /></a>
+          <a href="/"><img src="./images/logo.png" alt="suggestmee logo" /></a>
         </div>
-        <nav>
+        <nav class="suggestme-nav">
           <ul id="menuItems">
             <li><a href="/">Home</a></li>
             <li>
@@ -69,29 +67,54 @@
                 >Contact Us</a
               >
             </li>
+            <img
+              src="./images/close.svg"
+              class="menu-icon"
+              onclick="menutoggle()"
+              alt="menu logo"
+              style="top: 110px"
+            />
           </ul>
         </nav>
-        <img
-          src="./images/menu.png"
-          class="menu-icon"
-          onclick="menutoggle()"
-          alt="menu logo"
-        />
-      </div>
-      <div class="container home-page-image-container">
-        <div class="row">
-          <div class="home-page-text-container">
-            <p>A SELECTION OF THE BEST</p>
-            <h1>LAPTOP JUST FOR YOU</h1>
+
+        <div class="mobile-social-icons">
+          <img src="./images/fb.svg" alt="menu logo" class="social-icons" />
+          <img src="./images/insta.svg" alt="menu logo" class="social-icons" />
+          <img src="./images/mail.png" alt="menu logo" class="social-icons" />
+
+          <img
+            style="position: static"
+            src="./images/menu.png"
+            class="menu-icon"
+            id="menuIconClose"
+            onclick="menutoggle()"
+            alt="menu logo"
+          />
+        </div>
+
+        <hr style="margin: 30px 0" />
+
+        <div class="container home-page-image-container">
+          <div class="row">
+            <div class="home-page-text-container">
+              <p>A SELECTION OF THE BEST</p>
+              <h1>LAPTOP JUST FOR YOU</h1>
+            </div>
           </div>
         </div>
       </div>
     </header>
 
+    <!-- Laptop section starts -->
     <section style="padding-top: 40px">
       <div class="small-container">
-        <h2 class="title" style="margin-bottom: 40px">Featured Products</h2>
-        <div class="row">
+        <div style="margin-bottom: 20px">
+          <hr />
+          <h2 class="title">Featured Mobile</h2>
+          <hr />
+        </div>
+
+        <div class="row home-screen-product-detail-highlighters">
           <div class="col-4">
             <a href="basic_use_laptops.html">
               <img src="./images/product-1.jpg" alt="" />
@@ -113,34 +136,50 @@
         </div>
       </div>
     </section>
+    <!-- Laptop section ends -->
+
+    <!-- Mobile section starts -->
+    <section style="padding-top: 40px">
+      <div class="small-container">
+        <div style="margin-bottom: 20px">
+          <hr />
+          <h2 class="title">Featured Laptops</h2>
+          <hr />
+        </div>
+
+        <div class="row home-screen-product-detail-highlighters">
+          <div class="col-4">
+            <a href="basic_use_laptops.html">
+              <img src="./images/product-1.jpg" alt="" />
+              <h4>Basic Use Laptops</h4>
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="programming_laptops.html">
+              <img src="./images/product-2.png" alt="" />
+              <h4>Programming Laptops</h4>
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="gamming_laptops.html">
+              <img src="./images/product-3.png" alt="" />
+              <h4>Gaming Laptops</h4>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Mobile section end -->
 
     <!-- footer -->
-
     <footer>
       <div class="footer">
         <div class="container">
-          <div class="row">
-            <!----<div class="footer-col-1">
-              <h3>Download our App</h3>
-              <p>Download our App for Android and ios mobile phone.</p>
-              <div class="app-logo">
-                <img src="./images/play-store.png" alt="" />
-                <img src="./images/app-store.png" alt="" />
-              </div>
-            </div>------>
+          <div class="">
             <div class="footer-col-2">
-              <a href="/"><h1>SUGGESTMEE</h1></a>
+              <a href="/" style="text-decoration: none"><h1>SUGGESTMEE</h1></a>
               <p>Make your buying decision with us</p>
             </div>
-            <!----<div class="footer-col-3">
-              <h3>Useful Links</h3>
-              <ul>
-                <li><a href="#">Coupons</a></li>
-                <li><a href="#">Blog Post</a></li>
-                <li><a href="#">Return Policy</a></li>
-                <li><a href="#">Join Affiliate</a></li>
-              </ul>
-            </div>----->
             <!---<div class="footer-col-4">
               <h3>Follow Us</h3>
               <ul>
@@ -158,14 +197,17 @@
 
     <script>
       var menuItems = document.getElementById("menuItems");
+      var menuIconClose = document.getElementById("menuIconClose");
 
       menuItems.style.maxHeight = "0px";
 
       function menutoggle() {
         if (menuItems.style.maxHeight == "0px") {
-          menuItems.style.maxHeight = "200px";
+          menuItems.style.maxHeight = "100vh";
+          menuIconClose.style.display = "none";
         } else {
-          menuItems.style.maxHeight = "0px";
+          menuItems.style.maxHeight = "0";
+          menuIconClose.style.display = "block";
         }
       }
     </script>
