Add mobile phones

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
         </div>
         <nav class="suggestme-nav">
           <ul id="menuItems">
-            <li><a href="/">Home</a></li>
+            <li><a href="/">HOME</a></li>
+            <!--<li>
+              <a
+                href="https://www.facebook.com/SuggestMee-106460971998723/"
+                target="_blank"
+                >ABOUT</a
+              >
+            </li>-->
             <li>
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
@@ -64,7 +71,7 @@
             </li>
             <li>
               <a href="mailto:suggestme60@gmail.com?" target="_blank"
-                >Contact Us</a
+                >CONTACT</a
               >
             </li>
             <img
@@ -78,9 +85,17 @@
         </nav>
 
         <div class="mobile-social-icons">
-          <img src="./images/fb.svg" alt="menu logo" class="social-icons" />
-          <img src="./images/insta.svg" alt="menu logo" class="social-icons" />
-          <img src="./images/mail.png" alt="menu logo" class="social-icons" />
+          <a
+            href="https://www.facebook.com/SuggestMee-106460971998723/"
+            target="_blank"
+            ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
+          /></a>
+          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+            ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
+          /></a>
+          <a href="mailto:suggestme60@gmail.com?" target="_blank"
+            ><img src="./images/mail.png" alt="menu logo" class="social-icons"
+          /></a>
 
           <img
             style="position: static"
@@ -110,7 +125,7 @@
       <div class="small-container">
         <div style="margin-bottom: 20px">
           <hr />
-          <h2 class="title">Featured Mobile</h2>
+          <h2 class="title">BEST LAPTOPS</h2>
           <hr />
         </div>
 
@@ -143,27 +158,27 @@
       <div class="small-container">
         <div style="margin-bottom: 20px">
           <hr />
-          <h2 class="title">Featured Laptops</h2>
+          <h2 class="title">BEST MOBILES</h2>
           <hr />
         </div>
 
         <div class="row home-screen-product-detail-highlighters">
+          <!----<div class="col-4">
+            <a href="feature_mobiles.html">
+              <img src="./images/product-4.png" alt="" />
+              <h4>Featured Mobiles</h4>
+            </a>
+          </div>---->
           <div class="col-4">
-            <a href="basic_use_laptops.html">
-              <img src="./images/product-1.jpg" alt="" />
-              <h4>Basic Use Laptops</h4>
+            <a href="budget_friendly_mobiles.html">
+              <img src="./images/product-5.png" alt="" />
+              <h4>Budget Friendly Mobiles</h4>
             </a>
           </div>
           <div class="col-4">
-            <a href="programming_laptops.html">
-              <img src="./images/product-2.png" alt="" />
-              <h4>Programming Laptops</h4>
-            </a>
-          </div>
-          <div class="col-4">
-            <a href="gamming_laptops.html">
-              <img src="./images/product-3.png" alt="" />
-              <h4>Gaming Laptops</h4>
+            <a href="performance_mobiles.html">
+              <img src="./images/product-6.png" alt="" />
+              <h4>High Performance Mobiles</h4>
             </a>
           </div>
         </div>
