--- a/programming_laptops.html
+++ b/programming_laptops.html
@@ -57,17 +57,24 @@
         </div>
         <nav class="suggestme-nav">
           <ul id="menuItems">
-            <li><a href="/">Home</a></li>
+            <li><a href="/">HOME</a></li>
+            <!--<li>
+              <a
+                href="https://www.facebook.com/SuggestMee-106460971998723/"
+                target="_blank"
+                >ABOUT</a
+              >
+            </li>--->
             <li>
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
                 target="_blank"
-                >Follow Us</a
+                >FOLLOW</a
               >
             </li>
             <li>
               <a href="mailto:suggestme60@gmail.com?" target="_blank"
-                >Contact Us</a
+                >CONTACT</a
               >
             </li>
             <img
@@ -81,9 +88,17 @@
         </nav>
 
         <div class="mobile-social-icons">
-          <img src="./images/fb.svg" alt="menu logo" class="social-icons" />
-          <img src="./images/insta.svg" alt="menu logo" class="social-icons" />
-          <img src="./images/mail.png" alt="menu logo" class="social-icons" />
+          <a
+            href="https://www.facebook.com/SuggestMee-106460971998723/"
+            target="_blank"
+            ><img src="./images/fb.svg" alt="menu logo" class="social-icons"
+          /></a>
+          <a href="https://www.instagram.com/suggestmee_60/" target="_blank"
+            ><img src="./images/insta.svg" alt="menu logo" class="social-icons"
+          /></a>
+          <a href="mailto:suggestme60@gmail.com?" target="_blank"
+            ><img src="./images/mail.png" alt="menu logo" class="social-icons"
+          /></a>
 
           <img
             style="position: static"
