--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a
                 href="https://www.facebook.com/SuggestMee-106460971998723/"
                 target="_blank"
-                >Follow</a
+               >FOLLOW</a
               >
             </li>
             <li>
